--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
     "@testing-library/user-event": "12.8.0",
-    "axios": "0.21.1",
+    "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "react": "^17.0.1",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-cookie": "4.0.3",
